--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
   <body>
     <main>
+      <h1>Examples:</h1>
+      <ul>
+        <li>
+          <a href="/mouseMove/index.html">Basic Mouse move</a>
+        </li>
+        <li>
+          <a href="/penroseTiles/index.html">Penrose Tiles</a>
+        </li>
+      </ul>
     </main>
-    <script src="sketch.js"></script>
   </body>
 </html>
