:sparkles: adding example code from Steve's Makerspace

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
           <a href="/penroseTiles/index.html">Penrose Tiles</a>
         </li>
+        <li>
+          <a href="/artMaker/index.html">Art Maker</a>
+        </li>
       </ul>
     </main>
   </body>
