:sparkles: adding inital vanilla js canvas example

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
           <a href="/p5/artMaker/index.html">Art Maker</a>
         </li>
       </ul>
+
+      <h1>Vanilla Examples:</h1>
+      <ul>
+        <li>
+          <a href="/vanilla/fractals/index.html">Fractals</a>
+        </li>
+      </ul>
     </main>
   </body>
 </html>
