:sparkles: ridin' solo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <li>
           <a href="/vanilla/fractals/index.html">Fractals</a>
         </li>
+        <li>
+          <a href="/vanilla/grid/index.html">Grid</a>
+        </li>
       </ul>
     </main>
   </body>
